# nexus-chat

./: .gitignore  README.md
module/: Cargo.toml  README.md
module/src/: lib.rs
module/src/reducers/: agent_config.rs  agents.rs  attachments.rs  audit_log.rs  auth.rs  auto_mod.rs  blocks.rs  bookmarks.rs  bot_placement.rs  categories.rs  channel_overrides.rs  drafts.rs  emojis.rs  ephemeral.rs  forums.rs  invites.rs  lifecycle.rs  messages.rs  mod.rs  notifications.rs  permissions.rs  pins.rs  polls.rs  private_rooms.rs  profiles.rs  reactions.rs  read_tracking.rs  roles.rs  rooms.rs  scheduling.rs  servers.rs  shadow_index_backfill.rs  starred.rs  stickers.rs  system.rs  threads.rs  timeouts.rs  typing.rs  user_bus.rs  users.rs  (+1 more)
module/src/tables/: agent_config.rs  agents.rs  audit_log.rs  auth.rs  auto_mod_rules.rs  bookmarks.rs  channel_categories.rs  channel_overrides.rs  drafts.rs  forum_tags.rs  member_roles.rs  member_timeouts.rs  message_attachments.rs  message_edit_room_index.rs  message_edits.rs  messages.rs  mod.rs  notification_settings.rs  pinned_messages.rs  polls.rs  reaction_room_index.rs  reactions.rs  read_positions.rs  room_invitations.rs  room_members.rs  rooms.rs  scheduled_jobs.rs  scheduled_messages.rs  server_emojis.rs  server_invites.rs  server_members.rs  server_roles.rs  servers.rs  starred_channels.rs  stickers.rs  system_config.rs  typing_indicators.rs  user_blocks.rs  user_profiles.rs  users.rs  (+1 more)
module/src/utils/: auth.rs  auto_mod.rs  crypto.rs  mentions.rs  mod.rs  permissions.rs  time.rs  validation.rs
