[package]
name = "chat-spacetimedb"
version = "0.1.0"
edition = "2021"
description = "spacetime table for the Nexus Terminal CHAT service"
authors = ["Nexus Terminal Contributors"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Requires Rust 1.90+ (use rustup-managed cargo)
spacetimedb = { version = "2.0", features = ["unstable"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
